add_library(cymoca_ast STATIC
        ast.cc
        ast.h
        condition/condition.h
        declarations.h
        element/element.h
        equation/equation.h
        expression/expression.h
        listener/lisp.h
        listener/listener.h
        model/model.h
        node.h
        statement/statement.h
        walker.h
)
