add_library(cymoca_ast STATIC
        declarations.h
        Binary.cpp
        Binary.h
        Class.cpp
        Class.h
        Component.cpp
        Component.h
        ComponentRef.cpp
        ComponentRef.h
        ConditionBlock.h
        Dict.h
        FunctionCall.cpp
        FunctionCall.h
        List.h
        Listener.h
        Node.cpp
        Node.h
        SimpleStatement.cpp
        SimpleEquation.h
        SimpleEquation.cpp
        SimpleStatement.h
        SwapListener.cpp
        SwapListener.h
        Unary.cpp
        Unary.h
        Value.h
        Walker.cpp
        Walker.h
)
